@@ -6,9 +6,6 @@
 	</oaf_attribute>
 	<oaf_attribute name="name" type="string" _value="Seahorse PGP decrypt operations"/>
 	<oaf_attribute name="description" type="string" _value="Decryption operations on PGP encrypted files"/>
-	<oaf_attribute name="bonobo:supported_uri_schemes" type="stringv">
-		<item value="file"/>
-	</oaf_attribute>
 	<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
 		<item value="application/pgp-encrypted"/>
 		<item value="application/pgp"/>
@@ -25,9 +22,6 @@
 	</oaf_attribute>
 	<oaf_attribute name="name" type="string" _value="Seahorse PGP verify operation"/>
 	<oaf_attribute name="description" type="string" _value="Verify operation on PGP signed files"/>
-	<oaf_attribute name="bonobo:supported_uri_schemes" type="stringv">
-		<item value="file"/>
-	</oaf_attribute>
 	<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
 		<item value="application/pgp-signature"/>
 		<item value="application/pgp"/>
@@ -59,9 +53,6 @@
 	</oaf_attribute>
 	<oaf_attribute name="name" type="string" _value="Seahorse PGP encrypt and sign operations"/>
 	<oaf_attribute name="description" type="string" _value="Encrypt and sign operations on files"/>
-	<oaf_attribute name="bonobo:supported_uri_schemes" type="stringv">
-		<item value="file"/>
-	</oaf_attribute>
 	<oaf_attribute name="bonobo:supported_mime_types" type="stringv">
 		<item value="*/*"/>
 	</oaf_attribute>
