@@ -7,7 +7,8 @@
 	+ libseahorse/seahorse-vfs-data.c:
 	+ libseahorse/seahorse-vfs-data.h: 
 	* configure.in: Added support for gnome-vfs
-	
+	* bonobo/Seahorse_PGP_File_Listener.server.in: Allow use of remote URIs
+		
 2004-10-08  Nate Nielsen <nielsen@memberwebs.com>
 	
 	* libseahorse/seahorse-context.c: 
